[package]
name = "seedling-to-para-zombienet-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zombienet-sdk = { git = "https://github.com/paritytech/zombienet-sdk", version = "0.1.0-alpha.1" }
tokio = "1.28"
futures = "0.3"
subxt = "0.33.0"
tracing-subscriber = "0.3"
serde_json = "1.0"
anyhow = "1.0"